# negotiator-tester

./: .env  .gitignore  AGENTS.md  README.md  main.py  orjson.py  pyproject.toml  requirements.txt  test_smoke.py  test_sqlite.py
docs/: API.md  Database Schema.md  ICD.md  architecture.md
tasks/: lessons.md
